# APDoom

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS  README.md  appimage.sh  create_release.bat
.github/workflows/: cpp-linter.yml  main.yml
ap_gen_tool/: .gitignore  CMakeLists.txt  data.cpp  data.h  generate.cpp  maps.cpp  python.cpp  zip.hpp
ap_gen_tool/assets/json/: default_game_info.json
ap_gen_tool/assets/py/id1common/: __init__.py  options.py
ap_gen_tool/data/: heretic.data.json
ap_gen_tool/games/: doom.json  doom2.json  heretic.json
cmake/: config.h.cin
data/AppImage/: apdoom.desktop  run_launcher.sh
embed/: .gitignore  CMakeLists.txt  README.txt  compat_doom2_120.apworld  compat_doom_120.apworld  compat_heretic_120.apworld  doom_1993_beta.apworld  doom_ii_beta.apworld  heretic_beta.apworld
src/: CMakeLists.txt  ap_basic.c  ap_basic.h  ap_lsel.c  ap_lsel.h  ap_notif.c  ap_notif.h  crispy.c  crispy.h  d_event.h  d_iwad.c  d_loop.c  doomtype.h  i_joystick.c  i_joystick.h  i_main.c  i_system.c  i_system.h  i_video.c  i_video.h  m_config.c  m_controls.c  m_controls.h  v_trans.c  v_trans.h  v_video.c  v_video.h  w_file.c  w_file.h  w_file_apzip.c  w_main.c  w_main.h  w_merge.h  w_wad.c  w_wad.h
src/apzip/: CMakeLists.txt  apzip.c  apzip.h
src/archipelago/: .gitignore  CMakeLists.txt  apdoom.cpp  apdoom.h  apdoom_pwad.cpp  apdoom_pwad.hpp  gamedata.cpp  inc_menergy.c  inc_mgoals.c  inc_rando.c  inc_tweaks.c  local.hpp  music.cpp  world.cpp
src/archipelago/defs/: README.txt
src/doom/: CMakeLists.txt  am_map.c  ap_spec.c  d_englsh.h  d_main.c  d_pwad.c  d_pwad.h  deh_bexptr.c  deh_frame.c  deh_ptr.c  deh_thing.c  deh_weapon.c  doomstat.h  f_finale.c  g_game.c  g_game.h  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  info.c  info.h  level_select.c  m_crispy.c  m_crispy.h  m_menu.c  p_enemy.c  p_inter.c  p_map.c  p_maputl.c  p_mobj.c  p_mobj.h  p_saveg.c  p_setup.c  p_spec.c  p_switch.c  p_tick.c  p_user.c  r_data.c  r_data.h  (+6 more)
src/heretic/: CMakeLists.txt  am_map.c  ap_msg.c  ap_spec.c  ap_spec.h  ct_chat.c  d_main.c  doomdef.h  dstrings.h  f_finale.c  g_game.c  info.c  level_select.c  mn_menu.c  p_enemy.c  p_inter.c  p_local.h  p_map.c  p_mobj.c  p_saveg.c  p_setup.c  p_spec.c  p_switch.c  p_tick.c  p_user.c  r_data.c  s_sound.c  sb_bar.c
src/hexen/: CMakeLists.txt  am_map.c  h2_main.c  mn_menu.c  r_data.c
src/launcher/: CMakeLists.txt  launcher_icon.c  li_event.c  li_event.h  ln_exec.c  ln_exec.h  ln_util.c  ln_util.h  lv_ctrl.c  lv_ctrl.h  lv_text.c  lv_text.h  lv_video.c  lv_video.h  main.c
src/setup/: compatibility.c  display.c  execute.c  execute.h  joystick.c  joystick.h  keyboard.c  mainmenu.c  mode.c  txt_joybinput.c
src/strife/: CMakeLists.txt  am_map.c  ap_spec.c  ap_spec.h  d_main.c  doomstat.h  m_crispy.c  m_menu.c  r_data.c
textscreen/: txt_main.h
